objects/Yodlee_Order_Request__c.object
<CustomObject>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Yodlee Order Requests</relationshipLabel>
        <relationshipName>Yodlee_Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Yodlee Order Requests</relationshipLabel>
        <relationshipName>Yodlee_Order_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_trans__c</fullName>
        <formula>CASE( Status__c , 1, "Received", 
                  2, "Pending",
                  3, "AccountError",
                  4, "Queued*",
                  5, "Processing",
                  6, "OrderError",
                  7, "Completed",
                  8, "Cancelled", "")</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yodlee_Public_Id__c</fullName>
        <label>Yodlee Public Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Yodlee Order Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Yodlee Order Request  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Yodlee Order Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>